tests/negative/Internal/ExpectedFunctionType.juvix
module ExpectedFunctionType;
  type Pair (A : Type) :=
    mkPair : A → A → Pair A;

  type B :=
    b : B;

  f : Pair B → Pair B;
  f (mkPair a b) := a b;
end;
